Fix focus indicator on list and some buttons spacing

--- a/skins/elastic/styles/widgets/buttons.less
+++ b/skins/elastic/styles/widgets/buttons.less
@@ -101,8 +101,8 @@ button.btn {
 
 button.btn {
     &:before {
-        display: inline-block;
-        float: none;
+        display: inline !important;
+        float: none !important;
     }
 }
 
