--- a/skins/elastic/styles/widgets/jqueryui.less
+++ b/skins/elastic/styles/widgets/jqueryui.less
@@ -34,6 +34,14 @@
     .ui-dialog-titlebar {
         height: @layout-header-height;
         border-bottom: 1px solid @color-dialog-header-border;
+
+        button {
+            margin-right: .25rem;
+
+            &:before {
+                margin: 0;
+            }
+        }
     }
 
     .ui-dialog-title {
