--- a/skins/elastic/styles/widgets/toolbar.less
+++ b/skins/elastic/styles/widgets/toolbar.less
@@ -214,7 +214,7 @@
         a.button {
             flex-grow: 1;
             font-size: 80%;
-            min-width: 1rem !important;
+            min-width: 2rem !important;
             height: @layout-pagenav-height !important;
             color: @color-list-pagenav;
             overflow: hidden;
@@ -230,6 +230,7 @@
             font-size: 80%;
             color: @color-list-pagenav;
             text-overflow: ellipsis;
+            overflow: hidden;
             white-space: nowrap;
         }
 
